[package]
name = "meadow-f7-micro"
description = "A device support crate for the Meadow F7 Micro by Wilderness Labs"
documentation = "https://docs.rs/meadow-f7-micro"
keywords = ["embedded", "stm32f7", "stm32", "meadow"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal.git", features = ["stm32f777"] }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.3"

[dev-dependencies]
micromath = "1.0.0"
palette = { version = "0.5.0", default-features = false, features = ["libm"] }
panic-semihosting = "0.5.3"

[features]
rt = ["stm32f7xx-hal/rt"]
